# homeassistant_nature_remo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_ja.md  ROADMAP.md  SECURITY.md  hacs.json  pyproject.toml
.github/: CODEOWNERS  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: hacs.yml  hassfest.yml  release.yml  test.yml
custom_components/nature_remo/: __init__.py  ac_helpers.py  api.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  event.py  light.py  manifest.json  options_flow.py  remote.py  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/nature_remo/translations/: en.json  ja.json
tests/: conftest.py  test_ac_helpers.py  test_api.py  test_binary_sensor.py  test_button.py  test_climate.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entity.py  test_event.py  test_hacs_config.py  test_init.py  test_light.py  test_migrate.py  test_options_flow.py  test_remote.py  test_select.py  test_sensor.py  test_switch.py
