[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homeassistant_nature_remo"
version = "0.3.0"
description = "Nature Remo custom integration for Home Assistant"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "NaNaRin", email = "nanarins@gmail.com" },
    { name = "tamatyan99" },
]
keywords = ["homeassistant", "nature-remo", "smart-home"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "homeassistant>=2023.8.0",
    "aiohttp>=3.8.0",
    "voluptuous>=0.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "pytest-timeout>=2.3.0",
    "requests-mock>=1.12.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/tamatyan99/homeassistant_nature_remo"
Documentation = "https://github.com/tamatyan99/homeassistant_nature_remo#readme"
Issues = "https://github.com/tamatyan99/homeassistant_nature_remo/issues"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 120
addopts = "-v --tb=short"

[tool.coverage.run]
branch = true
source = ["custom_components/nature_remo"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"
